--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -8,14 +8,18 @@
 ; These will include git email depending on if i am in my work git dir or personal git dir. Adjust as necessary.
 ; Work specific:
 [includeIf "gitdir:~/git/work/"]
-        path = ~/git/work/.gitconfig
+	path = ~/git/work/.gitconfig
 
 [includeIf "gitdir:/mnt/c/git/work/"]
-        path = ~/git/work/.gitconfig
+	path = ~/git/work/.gitconfig
 
 ; Personal:
 [includeIf "gitdir:~/git/personal/"]
-        path = ~/git/personal/.gitconfig
+	path = ~/git/personal/.gitconfig
 
 [includeIf "gitdir:/mnt/c/git/personal/"]
-        path = ~/git/personal/.gitconfig
+	path = ~/git/personal/.gitconfig
+
+; Excluding OS specific file(s): .bashrc.extras
+[merge "nomerge"]
+	driver = true
