--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -149,3 +149,6 @@ Host *
 	MACs +hmac-sha2-256,hmac-sha2-512
 	StrictHostKeyChecking ask
 	User root
+
+### Anchor specific setup ###
+Include anchor/config
